# QuickTransfer

./: Cargo.toml  LICENSE  README.md  protocol.md  todo.md
src/: client.rs  common.rs  main.rs  messages.rs  server.rs
src/common/: messages.rs  mod.rs  receive_utils.rs  send_utils.rs
