[package]
name = "QuickTransfer"
version = "0.2.1"
authors = ["Emil Drwięga <emildrw@outlook.com>"]
description = "QuickTransfer allows you to quickly upload and download files from any computer."
readme = "README.md"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
argparse = "0.2.2"
bincode = "1.3.3"
serde = {version = "1.0.215", features = ["derive"]}
byteorder = "1.5.0"
colored = "2.1.0"
thiserror = "2.0.3"
tokio = {version = "1.42.0", features=["full"]}
tokio-stream = "0.1"
rustyline-async = "0.4.5"
aes = "0.8.4"
aes-gcm="0.10.3"
rand = "0.8.5"